added some semantic web/owl references

--- a/tex/background-diff.tex
+++ b/tex/background-diff.tex
@@ -147,7 +147,7 @@
 	\begin{itemize}
 	\item definition
 		\subitem formal definition, properties and relation of entities
-	\item use of BioOntologies cf. Courtot
+	\item use of BioOntologies cf. Courtot \cite{Courtot2011}
 	\end{itemize}
 
 	\todo{cite owl standard, when explaining comodi import}
