--- a/tex/zotero.bib
+++ b/tex/zotero.bib
@@ -809,4 +809,57 @@ Contact: tommy.yu\{at\}auckland.ac.nz},
   pmid = {21216774}
 }
 
+@incollection{Bechhofer2009,
+  title = {{{OWL}}: {{Web Ontology Language}}},
+  copyright = {\textcopyright{}2009 Springer Science+Business Media, LLC},
+  isbn = {978-0-387-35544-3 978-0-387-39940-9},
+  shorttitle = {{{OWL}}},
+  abstract = {SynonymsWeb ontology languageDefinitionThe Web Ontology Language OWL is a language for defining ontologies on the Web. An OWL Ontology describes a domain in terms of classes, properties and individuals and may include rich descriptions of the characteristics of those objects. OWL ontologies can be used to describe the properties of Web resources. Where earlier representation languages have been used to develop tools and ontologies for specific user-communities in areas such as sciences, health and e-commerce, they were not necessarily designed to be compatible with the World Wide Web, or more specifically the Semantic Web, as is the case with OWL.Features of OWL are a collection of expressive operators for concept description including boolean operators (intersection, union and complement), plus explicit quantifiers for properties and relationships; the ability to specify characteristics of properties, such as transitivity or domains and ranges; a well defined semanti ...},
+  language = {en},
+  timestamp = {2016-10-13T12:57:34Z},
+  urldate = {2016-10-13},
+  url = {http://link.springer.com/referenceworkentry/10.1007/978-0-387-39940-9_1073},
+  booktitle = {Encyclopedia of {{Database Systems}}},
+  publisher = {{Springer US}},
+  author = {Bechhofer, Sean},
+  editor = {LIU, LING and {\"O}ZSU, M. TAMER},
+  year = {2009},
+  keywords = {Computer Communication Networks,Computer Imaging; Vision; Pattern Recognition and Graphics,Database Management,Information Storage and Retrieval,Information Systems Applications (incl. Internet),Multimedia Information Systems},
+  pages = {2008--2009},
+  file = {Snapshot:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/7XKJ9VZF/10.html:text/html},
+  doi = {10.1007/978-0-387-39940-9_1073}
+}
+
+@article{Berners-Lee2001,
+  title = {The Semantic Web},
+  volume = {284},
+  timestamp = {2016-10-13T13:07:53Z},
+  number = {5},
+  journal = {Scientific american},
+  author = {Berners-Lee, Tim and Hendler, James and Lassila, Ora},
+  year = {2001},
+  pages = {28--37},
+  file = {Berners-Lee et al. - 2001 - The semantic web.pdf:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/5HREM4PV/Berners-Lee et al. - 2001 - The semantic web.pdf:application/pdf}
+}
+
+@article{Berners-Lee2001a,
+  title = {Publishing on the Semantic Web},
+  volume = {410},
+  copyright = {\textcopyright 2001 Nature Publishing Group},
+  issn = {0028-0836},
+  doi = {10.1038/35074206},
+  abstract = {The coming Internet revolution will profoundly affect scientific information.},
+  language = {en},
+  timestamp = {2016-10-13T13:17:31Z},
+  number = {6832},
+  urldate = {2016-10-13},
+  url = {http://www.nature.com/nature/journal/v410/n6832/full/4101023b0.html},
+  journal = {Nature},
+  author = {Berners-Lee, Tim and Hendler, James},
+  month = apr,
+  year = {2001},
+  pages = {1023--1024},
+  file = {Full Text PDF:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/EDU29T3Z/Berners-Lee and Hendler - 2001 - Publishing on the semantic web.pdf:application/pdf;Snapshot:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/53ZDFRC6/4101023b0.html:text/html}
+}
+
 
