--- a/tex/zotero.bib
+++ b/tex/zotero.bib
@@ -862,4 +862,34 @@ Contact: tommy.yu\{at\}auckland.ac.nz},
   file = {Full Text PDF:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/EDU29T3Z/Berners-Lee and Hendler - 2001 - Publishing on the semantic web.pdf:application/pdf;Snapshot:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/53ZDFRC6/4101023b0.html:text/html}
 }
 
+@article{Shadbolt2006,
+  title = {The {{Semantic Web Revisited}}},
+  volume = {21},
+  issn = {1541-1672},
+  doi = {10.1109/MIS.2006.62},
+  abstract = {The article included many scenarios in which intelligent agents and bots undertook tasks on behalf of their human or corporate owners. Of course, shopbots and auction bots abound on the Web, but these are essentially handcrafted for particular tasks: they have little ability to interact with heterogeneous data and information types. Because we haven't yet delivered large-scale, agent-based mediation, some commentators argue that the semantic Web has failed to deliver. We argue that agents can only flourish when standards are well established and that the Web standards for expressing shared meaning have progressed steadily over the past five years},
+  timestamp = {2016-10-14T12:43:28Z},
+  number = {3},
+  journal = {IEEE Intelligent Systems},
+  author = {Shadbolt, N. and Berners-Lee, T. and Hall, W.},
+  month = jan,
+  year = {2006},
+  keywords = {agent-based mediation,Artificial intelligence,Bioinformatics,e-science,Genomics,heterogeneous data,Humans,intelligent agents,Intelligent systems,multi-agent systems,Ontologies,Recruitment,Search engines,semantic networks,semantic Web,standards,Web services,Web sites},
+  pages = {96--101},
+  file = {IEEE Xplore Full Text PDF:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/FPVJWD8R/Shadbolt et al. - 2006 - The Semantic Web Revisited.pdf:application/pdf;IEEE Xplore Abstract Record:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/ERSTNE5K/1637364.html:text/html}
+}
+
+@misc{Bechhofer2004,
+  title = {{{OWL Web Ontology Language Reference}}},
+  abstract = {The Web Ontology Language OWL is a semantic markup language for publishing and sharing ontologies on the World Wide Web. OWL is developed as a vocabulary extension of RDF (the Resource Description Framework) and is derived from the DAML+OIL Web Ontology Language. This document contains a structured informal description of the full set of OWL language constructs and is meant to serve as a reference for OWL users who want to construct OWL ontologies.},
+  timestamp = {2016-10-14T18:17:45Z},
+  urldate = {2016-10-14},
+  url = {https://www.w3.org/TR/owl-ref/},
+  journal = {OWL Web Ontology Language Reference},
+  author = {Bechhofer, Sean and {van Harmelen}, Frank and Hendler, Jime and Horrocks, Ian and McGuinness, Deborah L. and Patel-Schneider, Peter F. and Stein, Lynn Andrea},
+  month = feb,
+  year = {2004},
+  file = {OWL Web Ontology Language Reference:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/TG4NG2EH/owl-ref.html:text/html}
+}
+
 
