added footnotes with links to teddy, kisao and sbo

--- a/tex/background-diff.tex
+++ b/tex/background-diff.tex
@@ -151,7 +151,7 @@
 	
 	To communicate and use these taxonomies the \owl standard was introduced \cite{Bechhofer2004,Bechhofer2009}. It encodes all terms, their relation, attributes and verbal description, as well as all rules.
 	
-	\sysbio uses this technology not directly as initially intended by Berners-Lee et al. \cite{Berners-Lee2001}, but to annotate already machine readable data files, instead of data sources available over the web. They hereby serve the purpose of giving additional information about parts of a model or the model itself. The variety of available ontologies ranges from biological species identification (SBO), over the description of simulation algorithms and proceeding (KiSAO) to the characterization of dynamics (TEDDY) \cite{Courtot2011}.
+	\sysbio uses this technology not directly as initially intended by Berners-Lee et al. \cite{Berners-Lee2001}, but to annotate already machine readable data files, instead of data sources available over the web. They hereby serve the purpose of giving additional information about parts of a model or the model itself. The variety of available ontologies ranges from biological species identification (SBO\footnote{\url{http://bioportal.bioontology.org/ontologies/SBO}}), over the description of simulation algorithms and proceeding (KiSAO\footnote{\url{http://bioportal.bioontology.org/ontologies/KISAO}}) to the characterization of dynamics (TEDDY\footnote{\url{http://bioportal.bioontology.org/ontologies/TEDDY}}) \cite{Courtot2011}.
 	
 	\begin{comment}
 	
