--- a/tex/zotero.bib
+++ b/tex/zotero.bib
@@ -892,4 +892,19 @@ Contact: tommy.yu\{at\}auckland.ac.nz},
   file = {OWL Web Ontology Language Reference:/home/martin/.mozilla/firefox/2czweqll.default/zotero/storage/TG4NG2EH/owl-ref.html:text/html}
 }
 
+@book{Robinson2013,
+  address = {Beijing ; Sebastopol, CA},
+  edition = {First edition},
+  title = {Graph Databases},
+  isbn = {978-1-4493-5626-2},
+  lccn = {QA76.9.D3 R6455 2013},
+  timestamp = {2016-10-15T09:31:34Z},
+  publisher = {{O'Reilly}},
+  author = {Robinson, Ian and Webber, James and Eifrem, Emil},
+  year = {2013},
+  note = {OCLC: ocn829452424},
+  keywords = {Database design,Database Management,Databases,Data processing,Graph theory},
+  annote = {Options for storing connected data -- Data modeling with graphs -- Building a graph database application -- Graphs in the real world -- Graph database internals -- Predictive analysis with graph theory -- NOSQL overview}
+}
+
 
