finished general neo4j section. transistion needs to smoothend

--- a/tex/ba-main.tex
+++ b/tex/ba-main.tex
@@ -17,6 +17,9 @@
 \usepackage{comment} 
 \usepackage{listings}
 
+\usepackage{amssymb}
+\usepackage{amsmath}
+
 % set date format
 \usepackage[style=iso]{datetime2}
 %\usepackage[yyyymmdd]{datetime}
