--- a/tex/background-repos.tex
+++ b/tex/background-repos.tex
@@ -30,6 +30,16 @@ In conclusion relational databases are less efficient in storing standard encode
 \end{comment}
 
 \subsection{Graph Databases}
+\todo{smooth connection between upper subsection, and this one}
+"A graph database management system (henceforth, a graph database) is an online database management system with Create, Read, Update, Delete (CRUD) methods that expose a graph data model." \cite{Robinson2013}
+Most graph databases are implemented as a property graph, meaning they consist out of nodes and relationships connecting exactly two nodes. Both nodes and relations may have additional properties attached to them, in form a of a key-value tuple.
+The main difference to, for instance, a Hypergraph is the strict limitation of nodes connected by a relation. Whereby a Hyperedge is able to link $n+2, n \in \mathbb{N}_0$ nodes. \cite[Appendix A]{Robinson2013}
+Graph database are contradictory concept, when compared with traditional relation databases, but offer great benefits in a variety of use cases. These include all types of querying for structural information, but also environments, which demand a more flexible approach to data modeling. 
+Due to the fact, that graph structures are additive, new relationships, node (classes) or even subgraphs can be added, without irritating existing queries or applications. Which in turn allows to interlink data, as it is demanded by the domain and not being locked into a schema, rather it allows for a genetic evolution of structure and schema with expanding understanding of the problem. cf. \cite{Robinson2013}
+
+In this work I focus on neo4j as a major graph database management system, because it also forms the foundation for \masymos, which is again the system my implementation is based on. (cf. Section \ref{sec:background:graph-db:masymos})
+
+\begin{comment}
 "A graph database management system (henceforth, a graph database) is an online database management system with Create, Read, Update, Delete (CRUD) methods that expose a graph data model. Graph databases are generally built for use with transactional (OLTP) systems." \cite{Robinson2013}
 
 property graph characteristics:
@@ -46,11 +56,7 @@ reasons for a graph-db:
 	"[...] we want to connect data as the domain dictates, thereby allowing structure and schema to emerge in tandem with our growing understanding of the problem space, rather than being imposed upfront, when we know least about the real shape and intricacies of the data. Graph databases address this want directly" \cite{Robinson2013}
 	
 	"Graphs are naturally additive, meaning we can add new kinds of relationships, new nodes, and new subgraphs to an existing structure without disturbing existing queris and application functionality." \cite{Robinson2013}
-	
-	
-\begin{itemize}
-	\item \todo{explain neo4j}
-\end{itemize}
+\end{comment}                        
 
 \subsection{Graph Database schema and the Entity Relation model}
 \label{sec:background:graph-db:er}
