revised text regarding ER model, to fit the revised figure

--- a/tex/implementation.tex
+++ b/tex/implementation.tex
@@ -15,6 +15,7 @@
 \section{\masymos diff plugin}
 	\begin{itemize}
 		\item interaction with \bives and neo4j
+		\item problems with Transaction rollback in actually successfull transactions
 	\end{itemize}
 
 \section{\rest interface and scheduling}
