--- a/tex/concept.tex
+++ b/tex/concept.tex
@@ -26,19 +26,22 @@
 \end{itemize}
 \todo{update description to fit the updated ER model}
 % description of ER model
-Figure \ref{fig:db-er-model} shows the proposed database schema as ER model. To reduce complexity and redundancy, for some entities only classes of higher hierarchy are modeled. E.g. a \texttt{DiffEntry} could be a \texttt{DiffInsert}, \texttt{DiffDelete}, \texttt{DiffModify} or \texttt{DiffMove}. Same applies for \texttt{ModelEntityType} and \texttt{ModelEntity}.
-On the left hand side the model shows the existing structure, developed with \masymos. The entities and relations shown on the middle and right hand side shall be added in to process of prototype development.
+Figure \ref{fig:db-er-model} shows the proposed database schema as ER model. To reduce complexity and redundancy, the storage structure of models in \masymos is simplified, shown on the left hand side of the figure. Further the \comodi ontology (cf. Section \ref{sec:background:onto:comodi}) is not remodeled, but instead represented as generic \texttt{OntologyTerm}.
+
 \todo{Add color to the diagram, to ease explanation}
 \todo{Find out, to what a Diff can link}
 
-The schema is build around a \texttt{Diff} entity linking two \texttt{Document} entities, which represent an (XML-)document containing a model. This entity does not necessarily need to span between two consecutive versions, but I decided for a standard setup it might be less useful to store differences between every possible combination of versions, since it would consume unreasonable amount of storage. Further are diffs concatable, so it does not take any computational effort to generate a diff for larger version steps out of consecutive diffs.
+The schema is organized around a \texttt{Diff} entity linking two \texttt{Document} entities, which represent an (XML-)document containing a model. The interlink is expressed via the \texttt{has\_diff} relation, which can be expressed in two roles: \texttt{source} and \texttt{destination}. I decided to use these terms in order to prevent confusion regarding the time line of the model versions, since \bives also does not discriminate any temporal information.
+This 2-hop relation does not necessarily need to span between two consecutive versions, but I decided for a standard setup it might be less useful to store differences between every possible combination of versions, since it would consume unreasonable amount of storage. Further are deltas concatable, so it does not take any significant computational effort to generate a diff for larger version steps out of consecutive diffs.
 
-Every \texttt{Diff} entity links to multiple \texttt{DiffEntry} entities via the \texttt{has\_entry} relation. Each \texttt{DiffEntry} represents a difference detected by \bives \cite{Scharm2015}. Not modeled in the ER model is the differentiation between possible types of the diff (insert, delete, move, modify), which will be represented by using different additional label in \neoj.
-Each \texttt{DiffEntry} links to at least on \texttt{ModleEntityType} or \texttt{ModelEntity} via either \texttt{old\_entity}, a \texttt{new\_entity}, or both, depending on the type of the difference.
-For instance a \texttt{DiffInsert} links to a \texttt{ModelEntityType} or \texttt{ModelEntity} of \emph{Version B} with a \texttt{new\_entity} relation.
-In contrast a \texttt{DiffDelete} links to \emph{Version A} with \texttt{old\_entity} to either a \texttt{ModelEntityType} or a \texttt{ModelEntity}. Whereby \texttt{DiffMove} and \texttt{DiffModify} use both relations \texttt{old\_entity} - linking to \emph{Version A} - and \texttt{new\_entity} - linking to Version B.
+Every \texttt{Diff} entity links to one or multiple \texttt{DiffEntry} via the \texttt{has\_entry} relation.  
+A \texttt{DiffEntry} can be either a \texttt{DiffInsert},  \texttt{DiffDelete}, \texttt{DiffMove} or a \texttt{DiffUpdate} entity, following the terms used by \bives \cite{Scharm2015} and \comodi \cite{Scharm2016}.
 
-Additionally a \texttt{DiffEntry} can link to an \texttt{OntologyTerm}, which again can be hierarchical relating to another \texttt{OntologyTerm}. Those terms are taken from the \comodi ontology \cite{Scharm2016}, cf. Section \ref{sec:background:onto:comodi}.
+Each \texttt{DiffEntry} represents a difference detected by \bives \cite{Scharm2015} and links to at least on \texttt{ModelEntity} via either \texttt{is\_source}, a \texttt{is\_destination}, or both, depending on the type of the difference.
+For instance a \texttt{DiffInsert} links to a \texttt{ModelEntity} of the \emph{destination} with a \texttt{is\_destination} relation.
+In contrast a \texttt{DiffDelete} links to the \emph{source} version with \texttt{is\_source} to a \texttt{ModelEntity}. Whereby \texttt{DiffMove} and \texttt{DiffModify} use both relations \texttt{is\_source} - linking to the \emph{source} - and \texttt{is\_destination} - linking to the \emph{destination} version.
+
+Additionally a \texttt{DiffEntry} can link to an \texttt{OntologyTerm}, which again are hierarchical structured, but not modeled in this ER model. Those terms are currently only taken from the \comodi ontology \cite{Scharm2016}, cf. Section \ref{sec:background:onto:comodi}, since no other ontology exists, describing changes.
 
 \todo{add table (or similar) of all entities and relations in the appendix}
 \todo{make visible, that ER model is just a sub-ER}
