added discussion like part to storage concept

--- a/tex/background-diff.tex
+++ b/tex/background-diff.tex
@@ -104,6 +104,7 @@
 	
 \section{Managing Versions}
 	\subsection{Traditional Version Control Systems}
+	\label{sec:background:manage-versions:traditional-vcs}
 	\begin{itemize}
 		\item benefits of version control systems
 			\subitem \todo{elaborate}
