extended figure of system architecture figure

--- a/tex/concept.tex
+++ b/tex/concept.tex
@@ -9,6 +9,9 @@
 	\centering
 	\includegraphics[width=\textwidth]{resources/system-overview-matrix.pdf}
 	\caption{Infrastructure overview}
+	\begin{flushleft}
+		Shown is the intended system architecture of \masymos \neoj and additional services. New implementations are displayed in green, whereby the parts directly extending \neoj are situated in a red box.
+	\end{flushleft}
 	\label{fig:system-overview}
 \end{figure}
 
