added more text in the concept section

--- a/tex/ba-main.tex
+++ b/tex/ba-main.tex
@@ -3,6 +3,8 @@
 \usepackage[a4paper, margin=3cm]{geometry}
 %\setlength{\parindent}{0pt}
 %\setlength{\parskip}{14pt plus 5mm minus 4mm}
+%\usepackage{setspace}
+%\setstretch{1.5}
 
 \usepackage[utf8]{inputenc}% erm\"oglich die direkte Eingabe der Umlaute 
 \usepackage[T1]{fontenc} % das Trennen der Umlaute
