--- a/tex/implementation.tex
+++ b/tex/implementation.tex
@@ -3,22 +3,26 @@
 \todo{pretty short, every subproject gets a section}
 \todo{add figure showing differences of concept and implementation, regarding figure \ref{fig:system-overview}}
 
-\section{ModelCrawler}
+\section{\modelcrawler}
+	\label{sec:impl:modelcrawler}
 	\todo{to be decided}
 
 \section{Extension to the \masymos core}
+	\label{sec:impl:masymos}
 	\begin{itemize}
 		\item generic ontology import for COMODI
 		\item some helper methods/functions
 	\end{itemize}
 
 \section{\masymos diff plugin}
+	\label{sec:impl:diff}
 	\begin{itemize}
 		\item interaction with \bives and neo4j
 		\item problems with Transaction rollback in actually successfull transactions
 	\end{itemize}
 
 \section{\rest interface and scheduling}
+	\label{sec:impl:rest}
 	\begin{itemize}
 		\item \rest interface for requesting diffs
 		\item time based trigger for generating diffs for new versions
