--- a/tex/shortcuts.tex
+++ b/tex/shortcuts.tex
@@ -17,9 +17,11 @@
 \newcommand{\owl}{OWL\xspace}
 
 \newcommand{\masymos}{MaSyMoS\xspace}
+\newcommand{\morre}{Morre\xspace}
 \newcommand{\bives}{BiVeS\xspace}
 \newcommand{\comodi}{COMODI\xspace}
 \newcommand{\neoj}{neo4j\xspace}
+\newcommand{\modelcrawler}{Model~Crawler\xspace}
 
 \newcommand{\sysbio}{Systems Biology\xspace}
 \newcommand{\rest}{REST\xspace}  % like in REST interface
