added 'compiled at' note

--- a/tex/ba-main.tex
+++ b/tex/ba-main.tex
@@ -39,6 +39,10 @@
 	\maketitle
 	\tableofcontents
 	
+	% info about compiling date
+	\vfill
+	{\tiny  \LaTeX ~compiled at \DTMnow}
+	
 	\chapter{Introduction}
 	% comment command for Dagmar (defined in shortcuts.tex)
 	%\dw{This a is comment from Dagmar}
