added shorter chaptermark for Diference Detection chapter

--- a/tex/ba-main.tex
+++ b/tex/ba-main.tex
@@ -48,7 +48,8 @@
 	%\dw{This a is comment from Dagmar}
 	\input{introduction.tex}
 	
-	\chapter{Difference detection and its challenges for System Biological Models}
+	\chapter{Difference detection and its challenges for Systems Biology Models}
+	\chaptermark{Difference detection}
 	\input{background-diff.tex}
 	
 	\chapter{Repositories for System Biological Models}
