--- a/tex/background-diff.tex
+++ b/tex/background-diff.tex
@@ -34,9 +34,7 @@
 	
 	\todo{add ref to both examples XyDiff + the other one?}
 	
-	
 	\begin{comment}
-	
 	cf. Cobena2002 \cite{Cobena2002} and \cite{Waltemath2013} in section 2.2.1
 	Chawathe et al., 1996 \cite{Chawathe1996}
 	\begin{itemize}
@@ -51,6 +49,7 @@
 	\end{comment}
 	
 	\subsection{BiVeS}
+	\label{sec:background:diff:bives}
 	\todo{use the terms source and destination document}
 	Continuing on the problem described, in section \ref{sec:background:diff:xml-diff}, the same issue with \xml documents and normal delta algorithms scales to more specific documents and \xml delta algorithms. In this case we look at \xml encoded biological models, either using \cellml or \sbml. Even though algorithms described in the prior section are treating \xml documents as trees, they still lack deeper understanding of a biological model for instance. \bives is addressing this issue by building upon XyDiff (cf. section \ref{sec:background:diff:xml-diff}), but also incorporating additional features specific to system biological models, like ontology links, attribute references, and special parts of the model, which are treated atomically \cite{Scharm2015}.
 	
@@ -105,6 +104,17 @@
 \section{Managing Versions}
 	\subsection{Traditional Version Control Systems}
 	\label{sec:background:manage-versions:traditional-vcs}
+	
+	A Version Control System (VCS) or sometimes Revision Control System, is an automated system to manage multiple versions, or revisions, of information pieces \cite{OSullivan2009}.
+	Further, since larger projects are rarely developed by a single person, nearly all VCSs provide mechanisms for collaboration. Version control supports this inherently social endeavor, consisting of continuous introduction, discussion, or evaluation of changes, or even undoing of such \cite{Collins-Sussman2004}.
+
+	This said, a VCS is a crucial tool for every major project and therefore also found interest in Systems Biology, as multiple research paper suggest \cite{Waltemath2013,Beard2009,Hucka2003,Li2010,Miller2011}.
+	All VCS, besides using different files with a version tag, automatically track each version of a file along with relevant meta information. These usually contain date of the change, author and a checksum of the version.
+	Outgoing from this basic feature set, two types of VCS are currently used: On the one hand there are centralized VCS, like CVS or its successor Subversion. They focus on one central server, keeping track of all changes. Due to that, working offline is not possible \cite{Collins-Sussman2004}
+	On the other hand recently a trend around Distributed Version Control Systems (DVCSs) evolved, for instance Mercurial and Git. There basic architecture does not require a central unit, instead every client keeps a full copy of the version history, exchanging changes nearly always require a merge operation between at least two change sets \cite{OSullivan2009}.
+	But DVCSs do not completely abandon the idea of a central server, instead it is treated as a place to share changes with other teammates, still allowing for experiments or off-mainstream development.
+	
+	\begin{comment}
 	\begin{itemize}
 		\item benefits of version control systems
 			\subitem \todo{elaborate}
@@ -127,8 +137,11 @@
 			\subitem \todo{refer to version-graph later, when explaining db concept}
 			\subitem \url{https://git-scm.com/book/en/v2/Git-Internals-Plumbing-and-Porcelain}
 	\end{itemize}
+	\end{comment}
 		
 	\subsection{Challenges traditional VCS face with Systems Biology models}
+	\label{sec:background:manage-versions:challenges}
+	
 	\begin{itemize}
 		\item SVN and GIT are using unix-diff -> not suitable for XML files (cf. XML diff section)
 		\item no semantic information about the changes (cf. comodi)
