increased size of masymos figure

--- a/tex/background-repos.tex
+++ b/tex/background-repos.tex
@@ -130,7 +130,7 @@ Further, to allow for easy upwards traversal, all relations also feature a commo
 \todo{paragraph about shortcomings}
 \begin{figure}
 	\centering
-	\includegraphics[height=150pt]{resources/masymos_struc_figure2.eps}
+	\includegraphics[width=\textwidth]{resources/masymos_struc_figure2.eps}
 	\caption{Structure representing \sbml and \cellml models in \masymos. Figure taken from Henkel et al., 2015 \cite{Henkel2015}}
 	\label{fig:background:graph-db:masymos}
 \end{figure}
